<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Krishaker Bondhu</string>
    <string name="Continue">চালিয়ে যান</string>
    <string name="logo">logo</string>
    <string name="onboarding_text2">স্ন্যাপ করুন এবং পরীক্ষা করুন    \n আপনার ফসল কোন রোগে আক্রান্ত হয়েছে…</string>
    <string name="crop_disease">ফসলের রোগ</string>
    <string name="swipe_right">ডানদিকে সোয়াইপ করুন</string>
    <string name="onboarding_text1">আপনার স্থানীয় আবহাওয়া মূল্যায়নের উপর ভিত্তি করে ফসলের সুপারিশ পান…</string>
    <string name="swipe">সোয়াইপ করুন</string>
    <string name="onboarding_text3">আপনার নির্দিষ্ট মাটির ধরণের জন্য সঠিক ফসল জন্মানোর জন্য জানুন…</string>
    <string name="onboarding_text4">আপনার পরবর্তী কৃষি অধিবেশনের জন্য বাজেট প্রস্তুত করতে মোট সহায়তা পান…</string>
    <string name="krishoker">কৃষকের</string>
    <string name="bondhu">বন্ধু</string>
    <string name="sign_in_with_google">Google দিয়ে সাইন ইন করুন</string>
    <string name="designed_and_developed_by_team_amigo_ltd">designed and developed by team Amigo LTD.</string>
    <string name="intro_prompt">টিম Amigo-এর কাছ থেকে কৃতজ্ঞতার অভিব্যক্তি হিসাবে আমাদের প্রিয় কৃষকদের সাহায্য করার জন্য সম্পূর্ণরূপে নিবেদিত প্রথম অ্যাপ্লিকেশন…</string>
    <string name="dummy_mail">sheriMello1342021@gmail.com</string>
    <string name="hint_here">hint here…</string>
    <string name="title">title</string>
    <string name="profile">প্রোফাইল</string>
    <string name="history">ইতিহাস</string>
    <string name="logout">লগআউট</string>
    <string name="crop_name">ফসলের নাম</string>
    <string name="area">এলাকা</string>
    <string name="land_area">জমির আয়তন (কাঠা)</string>
    <string name="hint_crop_name_strawberry">যেমন স্ট্রবেরি</string>
    <string name="hint_crop_name_aus">যেমন আউশ</string>
    <string name="hint_area">যেমন চট্টগ্রাম</string>
    <string name="hint_land_area">যেমন 0.67 অথবা 3</string>
    <string name="check">চেক</string>
    <string name="loading">লোড হচ্ছে…</string>s
    <string name="splash_background">splash background</string>
    <string name="Dhaka">Dhaka</string>
    <string name="dummy_data_download_dialogue">অনুগ্রহ করে অ্যাপটি ছেড়ে যাবেন না   \n লোকেশন ডেটা ডাউনলোড করা হচ্ছে…</string>
    <string name="upload">আপলোড</string>
    <string name="paddy">ধান</string>
    <string name="others">অন্যান্য</string>
    <string name="reason">কারণ:</string>
    <string name="sounds_great">দারুণ শোনাচ্ছে!</string>
    <string name="red">#FF0000</string>
    <string name="privacy_text">নীচে উপস্থাপিত ফাংশনগুলি ব্যবহার করতে একটিতে ক্লিক করুন।   \n ***আপনার সমস্ত তথ্য আমাদের সার্ভারে সংরক্ষণ করার আগে এনক্রিপ্ট করা হয়।</string>
    <string name="get_budget">বাজেট পান</string>
    <string name="user_image">user image</string>
    <string name="menu">menu</string>
    <string name="all_services">সমস্ত পরিষেবা:</string>
    <string name="crop_nrecommendation">ফসলের   \n সুপারিশ</string>
    <string name="crop_recommendation_desc">আবহাওয়ার তথ্য এবং পূর্বাভাসের বিশ্লেষণ প্রতিবেদনের ভিত্তিতে ফসলের সুপারিশ পান।</string>
    <string name="disease_ndiagnosis">রোগ   \n নির্ণয়</string>
    <string name="disease_diagnosis_desc">আপনার ফসলের একটি ছবি ক্যাপচার করে এবং আপলোড করার মাধ্যমে আপনার ফসলে কোন রোগে আক্রান্ত হয়েছে তা শনাক্ত করুন।</string>
    <string name="soil_nidentification">মাটি   \n সনাক্তকরণ</string>
    <string name="soil_identification_desc">আপনার জমির মাটির ধরন শনাক্ত করুন, শুধু মাটির ছবি তুলে আপলোড করে।</string>
    <string name="budget_nformulation">বাজেট   \n প্রণয়ন</string>
    <string name="budget_formulation_desc">পরবর্তী কৃষি অধিবেশনের জন্য বাজেট প্রণয়নে সহায়তা পান।</string>
    <string name="log_out">লগআউট</string>
    <string name="punch_hole_image">punch hole image</string>
    <string name="background_image">background image</string>
    <string name="username">username</string>
    <string name="email_here">email here</string>
    <string name="phone_number_here">phone number here</string>
    <string name="send_a_suggestion">একটি পরামর্শ পাঠান</string>
    <string name="delete_account">অ্যাকাউন্ট মুছে ফেলুন</string>
    <string name="card">card</string>
    <string name="phone_dummy">আপনার ফোন নম্বর যোগ করুন</string>
    <string name="add_phone">আপনার ফোন নম্বর যোগ করুন</string>
    <string name="add_address">আপনার জেলা যোগ করুন</string>
    <string name="save_changes">পরিবর্তনগুলোর সংরক্ষন!</string>
    <string name="take_a_picture">একটি ছবি তুলুন</string>
    <string name="pick_from_gallery">গ্যালারি থেকে বাছাই</string>
    <string name="disease_name_here">রোগের নাম এখানে</string>
    <string name="selected_image">selected image</string>
    <string name="hispa">হিসপা</string>
    <string name="brownspot">বাদামী দাগ</string>
    <string name="doash_mati">দোঁআশ মাটি</string>
    <string name="sandy_soil">বেলে মাটি</string>
    <string name="doash_mati_info">১। বালি, পলি ও কাদা সমপরিমাণে থাকে।\n২। পানি ধারন ক্ষমতা মাঝারী।\n৩। চাষ ব্যবস্থাপনায় পুকুর তৈরির জন্য দোঁআশ মাটি সবচেয়ে ভাল।\n৪। চাষাবাদের জন্য দোআঁশ মাটি উপযুক্ত।\n৫। এই মাটির জন্য উপযুক্ত ফসলঃ ধান, পাট, গম, পিয়াজ, মরিচ, ভূট্টা, আলু, শাকসবজি ইত্যাদি।</string>
    <string name="sandy_soil_info">১। বালির ভাগ বেশি।\n২। পানি ধারন ক্ষমতা কম।\n৩। ভালভাবে বাতাস চলাচল করতে পারে।\n৪। ধান-সবজি চাষের জন্য উপযুক্ত নয়।\n৫। এই মাটির জন্য উপযুক্ত ফসলঃ তরমুজ শসা, বাঙ্গী, চীনাবাদাম, মিষ্টি আলু ইত্যাদি।</string>
    <string name="hispa_suggestion">1\) ধানের চারা ডিম, গ্রাব এবং হিস্পা থেকে মুক্ত হওয়া উচিত। \n 2\) রাতুন ফসল এড়ানো উচিত \n 3\) বিকল্প পোষক (শামা ঘাস, গম এবং ভুট্টা\) ধ্বংস করতে হবে। \n 4\) পাতাগুলি উপরে থেকে 5 ইঞ্চি পর্যন্ত কাটা উচিত। \n 5\) প্রাপ্তবয়স্কদের নেট ঝাড়ু দিয়ে সংগ্রহ করতে হবে।  \n </string>
    <string name="brownspot_suggestion">1\) মাটির পুষ্টি নিয়মিত পর্যবেক্ষণ করুন \n 2\) প্রয়োজনীয় সার প্রয়োগ করুন \n 3\) যে মাটিতে সিলিকনের পরিমাণ কম, সেখানে রোপণের আগে ক্যালসিয়াম সিলিকেট স্ল্যাগ প্রয়োগ করুন \n 4\) প্রতিরোধী জাত ব্যবহার করুন। \n 5\) উপলব্ধ জাতের আপ–টু–ডেট তালিকার জন্য আপনার স্থানীয় কৃষি অফিসে যোগাযোগ করুন। \n 6\) ছত্রাকনাশক ব্যবহার করুন (যেমন, iprodione, propiconazole, azoxystrobin, trifloxystrobin, and carbendazim\) বীজ শোধন হিসাবে। \n 7\) বীজ রোপণের 10–12 মিনিট আগে গরম জল (53−54°C\) দিয়ে শোধন করুন, চারা হওয়ার পর্যায়ে প্রাথমিক সংক্রমণ নিয়ন্ত্রণ করতে। চিকিত্সার কার্যকারিতা বাড়ানোর জন্য, ঠাণ্ডা জলে বীজ আট ঘন্টা আগে ভিজিয়ে রাখুন।</string>

</resources>