<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignIn">

    <ImageView
        android:id="@+id/image_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".3"
        android:scaleType="centerCrop"
        android:src="@drawable/splashbg"
        android:transitionName="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/splash_background" />


    <Button
        android:id="@+id/button_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:icon="@drawable/google"
        android:backgroundTint="@color/greenishGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.kirshokerbondhu.classes.TypeWriter
        android:id="@+id/text_krishoker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:includeFontPadding="false"
        android:text="@string/krishoker"
        android:textColor="@color/greenishGrey"
        android:textSize="41sp"
        android:textStyle="italic"
        android:transitionName="@string/krishoker"
        app:layout_constraintBottom_toTopOf="@+id/button_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.kirshokerbondhu.classes.TypeWriter
        android:id="@+id/text_bondhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bontserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/bondhu"
        android:textColor="@color/greenishGrey"
        android:textSize="25sp"
        android:transitionName="@string/bondhu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_krishoker"
        app:layout_constraintTop_toBottomOf="@+id/text_krishoker"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/designed_and_developed_by_team_amigo_ltd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>