<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/crop_disease"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding_bg02" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#95000000" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="19dp"
        android:fontFamily="@font/bontserrat_bold"
        android:text="@string/onboarding_text2"
        android:textColor="#ffffff"
        android:textSize="27sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="11dp"
        android:drawablePadding="7dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/swipe"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:drawableRightCompat="@drawable/arrow2"
        app:drawableEndCompat="@drawable/arrow2"
        app:drawableTint="@color/white" />

    <View
        android:id="@+id/swipe_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</RelativeLayout>