<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    android:layoutAnimation="?android:animateLayoutChanges"
    tools:context=".activities.Splash">

    <ImageView
        android:id="@+id/image_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".3"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@drawable/splashbg"
        android:transitionName="@string/Continue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_bangabandhu_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:alpha=".3"
        android:scaleType="centerCrop"
        android:src="@drawable/bangabandhu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.kirshokerbondhu.classes.TypeWriter
        android:id="@+id/text_krishoker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:gravity="end"
        android:includeFontPadding="false"
        android:text=""
        android:textColor="@color/white"
        android:textSize="41sp"
        android:textStyle="normal"
        android:transitionName="@string/krishoker"
        app:layout_constraintBottom_toTopOf="@+id/text_bondhu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.example.kirshokerbondhu.classes.TypeWriter
        android:id="@+id/text_bondhu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bontserrat_bold"
        android:includeFontPadding="false"
        android:text=""
        android:textColor="#75ffffff"
        android:textSize="25sp"
        android:transitionName="@string/bondhu"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_krishoker"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>