<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:paddingTop="11dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="31dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="21dp"
                android:fontFamily="@font/bontserrat_bold"
                android:padding="11dp"
                android:text="@string/crop_recommendation_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_crop_name"
            app:layout_constraintStart_toStartOf="@+id/edit_crop_name"
            app:layout_constraintTop_toBottomOf="@+id/card_desc">

            <RadioButton
                android:id="@+id/radio_paddy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="11dp"
                android:fontFamily="@font/bontserrat_bold"
                android:text="@string/paddy" />

            <RadioButton
                android:id="@+id/radio_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bontserrat_bold"
                android:text="@string/others" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_crop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/bontserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/crop_name"
            android:textColor="@color/greenishGrey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/edit_crop_name"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <AutoCompleteTextView
            android:id="@+id/edit_crop_name"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginTop="5dp"
            android:autofillHints="null"
            android:drawableStart="@drawable/crop"
            app:drawableTint="@color/greenishGrey"
            android:drawablePadding="9dp"
            android:background="@drawable/stroked_rounded_box"
            android:completionThreshold="1"
            android:dropDownAnchor="@id/text_area"
            android:dropDownHeight="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:fontFamily="@font/bontserrat_bold"
            android:hint="@string/hint_crop_name_aus"
            android:includeFontPadding="true"
            android:inputType="textAutoComplete"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/greenishGrey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_crop_name"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent=".65" />

        <TextView
            android:id="@+id/text_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/bontserrat_bold"
            android:includeFontPadding="false"
            android:text="@string/area"
            android:textColor="@color/greenishGrey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/edit_crop_name"
            app:layout_constraintStart_toStartOf="@+id/edit_crop_name"
            app:layout_constraintTop_toBottomOf="@+id/edit_crop_name" />


        <AutoCompleteTextView
            android:id="@+id/edit_area"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="19dp"
            android:drawableStart="@drawable/location"
            app:drawableTint="@color/greenishGrey"
            android:drawablePadding="9dp"
            android:autofillHints="null"
            android:background="@drawable/stroked_rounded_box"
            android:completionThreshold="1"
            android:dropDownAnchor="@id/text_area"
            android:dropDownHeight="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:fontFamily="@font/bontserrat_bold"
            android:hint="@string/hint_area"
            android:includeFontPadding="true"
            android:inputType="textAutoComplete"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/greenishGrey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_crop_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edit_crop_name"
            app:layout_constraintTop_toBottomOf="@+id/text_area"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintWidth_percent=".65" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#009688"
            app:cardCornerRadius="100dp"
            app:cardElevation="5dp"
            android:layout_marginTop="11dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_area"
            app:layout_constraintTop_toBottomOf="@+id/edit_area">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="11dp"
                android:layout_marginBottom="7dp"
                android:drawableStart="@drawable/done"
                android:drawablePadding="11dp"
                android:drawableTint="@color/white"
                android:fontFamily="@font/bontserrat_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/check"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <com.example.kirshokerbondhu.classes.TypeWriter
            android:id="@+id/text_verdict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:fontFamily="@font/bontserrat_bold"
            android:text=""
            android:textColor="@color/black"
            android:textSize="31sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_check" />

        <TextView
            android:id="@+id/text_reason_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bontserrat_bold"
            android:text=""
            android:textColor="@color/black"
            android:textSize="27sp"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="@+id/text_verdict"
            app:layout_constraintTop_toBottomOf="@+id/text_verdict" />

        <com.example.kirshokerbondhu.classes.TypeWriter
            android:id="@+id/text_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/greenishGrey"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_reason_tag"
            app:layout_constraintVertical_bias="0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>